fixed picture alignment issues

--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 .main-text {
-  padding: 10vh 10px;
+  padding-top: 100px;
+  padding-left: 5vw;
+  padding-right: 5vw;
   color: rgb(41, 41, 99);
   height: 90vh;
-  margin: 0% 10%;
-  font-family: Trebuchet MS;
+  margin: 0% 0%;
+  font-family: Lucida Grande;
 }
 
 body {
@@ -11,17 +13,19 @@ body {
 }
 
 .banner {
-  background-color: white;
+  background-color: rgb(41, 41, 99);
   position: fixed;
   left: 0%;
   top: 0%;
   width: 100vw;
-  padding-left: 13vw;
-  font-family: Georgia;
+  height: 80px;
+  padding-left: 5vw;
+  font-family: Didot;
+  color: white;
 }
 
 .details {
-  margin-left: 3%;
+  margin-left: 0vw;
 }
 
 .details {
@@ -35,4 +39,18 @@ body {
 .horizontal-container {
   display: flex;
   flex-direction: row;
+}
+
+.image {
+  display: block;
+}
+
+.text {
+  padding-left: 1vw;
+}
+
+.figure {
+  text-align: center;
+  all: unset;
+  display: block;
 }
